<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_setAutoLogin"
        android:title="设置自动登录" />

    <item
        android:id="@+id/action_report"
        android:icon="@drawable/ic_share_24"
        android:title="分享日志"
        app:showAsAction="always" />
    <!--item
        android:id="@+id/action_battery"
        android:title="忽略电池优化" /-->
    <!--item
        android:id="@+id/action_fast_restart"
        android:title="快速重启" /-->
</menu>
