<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="在下面输入你的账号和密码，软件将会保存你的账号和密码并在应用启动时完成登录，你可以随时取消." />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="我们存储密码的md5值，请注意设备安全" />

    <EditText
        android:id="@+id/qq_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="QQ号"
        android:inputType="number" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="密码"
        android:inputType="textPassword" />
</LinearLayout>
