...
        android:id="@+id/nav_plugins"
        android:name="io.github.mzdluo123.mirai.android.ui.plugin.PluginFragment"
        android:label="插件管理"
        tools:layout="@layout/fragment_plugin" />

    <fragment
        android:id="@+id/nav_scripts"
        android:name="io.github.mzdluo123.mirai.android.ui.script.ScriptFragment"
        android:label="脚本管理"
        tools:layout="@layout/fragment_script">
        <action
            android:id="@+id/action_nav_scripts_to_nav_scripts_center"
            app:destination="@id/nav_scripts_center" />
    </fragment>

    <fragment
        android:id="@+id/nav_scripts_center"
        android:name="io.github.mzdluo123.mirai.android.ui.script.ScriptCenterFragment"
        android:label="脚本中心"
...
