...
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_delete"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#00FFFFFF"
        android:contentDescription="delete"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:tint="@color/colorBtnImg"
        android:src="@drawable/ic_delete_black_24dp"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_reload"
...
